Archive2/7b/f2ad5be4f9ae52/output
main.cpp: In member function 'void map::draw()':
main.cpp:19:83: error: invalid use of non-static member function
         auto map_draw_function = std::bind(this->draw_specific_tile, 1, _1, _2, _3)
                                                                                   ^
